--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,7 +23,16 @@ form {
   text-align: center;
 }
 
-.main-header {
+.image {
+  height: 20rem;
+
+}
+
+.image img {
+  height: 100%;
+}
+
+.image img .main-header {
   width: 100%;
   height: 3.5rem;
   background-color: #00695c;
